<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer_layout_about_app"
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/background">

        <include
                layout="@layout/app_bar_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <ImageView android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:layout_gravity="center"
                   android:layout_marginVertical="40dp"
                   android:src="@mipmap/ic_launcher_round"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/about_app"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginVertical="15dp"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@string/about_text"/>

        <TextView
                android:id="@+id/web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"
                android:text="@string/web"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="15dp"
                android:background="@color/colorPrimary">
        </View>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/support_header"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginVertical="15dp"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@string/support"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="15dp"
                android:background="@color/colorPrimary">
        </View>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginVertical="15dp"
                android:text="@string/version"/>
    </LinearLayout>

    <android.support.design.widget.NavigationView
            android:id="@+id/nav_view_about_app"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            android:background="@color/design_default_color_primary"
            app:itemTextColor="@color/colorAccent"
            app:itemIconTint="@color/colorAccent"
            app:headerLayout="@layout/nav_header_main"
            app:menu="@menu/activity_main_drawer"/>
</android.support.v4.widget.DrawerLayout>
