<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.activities.UserActivity.ChangeUserActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">

            <TextView
                    android:text="@string/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="30dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/change_title"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:drawableStart="@drawable/ic_ad"
                        android:drawablePadding="10dp"
                        android:hint="@string/change_title"
                        android:textColorHint="@color/colorAccent"
                        android:inputType="textShortMessage"
                        android:lines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <TextView
                    android:text="@string/city"
                    android:layout_width="wrap_content"
                    android:layout_marginVertical="15dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/change_city"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:drawableStart="@drawable/ic_place"
                        android:drawablePadding="10dp"
                        android:hint="@string/change_city"
                        android:textColorHint="@color/colorAccent"
                        android:inputType="textShortMessage"
                        android:lines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <TextView
                    android:text="@string/description"
                    android:layout_width="wrap_content"
                    android:layout_marginVertical="15dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/change_description"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:drawableStart="@drawable/ic_about_ad"
                        android:drawablePadding="10dp"
                        android:hint="@string/change_description"
                        android:textColorHint="@color/colorAccent"
                        android:inputType="textMultiLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <TextView
                    android:text="@string/price_ad_add"
                    android:layout_width="wrap_content"
                    android:layout_marginVertical="15dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/change_price"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:drawableStart="@drawable/ic_price"
                        android:drawablePadding="10dp"
                        android:hint="@string/change_price"
                        android:textColorHint="@color/colorAccent"
                        android:inputType="number"
                        android:lines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/change_ad"
                    android:layout_marginBottom="20dp"
                    android:text="@string/save_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/button"
                    android:theme="@style/RoundedCornerButton"
                    android:layout_gravity="center"/>
        </LinearLayout>

        <ProgressBar
                android:id="@+id/progressBar_ad_change"
                android:visibility="invisible"
                android:layout_height="100dp"
                android:layout_width="100dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>