<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout_add_ad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">
    <ScrollView
            android:id="@+id/add_ad_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <include
                    layout="@layout/app_bar_other"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/name"
                        android:layout_marginVertical="20dp"
                        android:drawableLeft="@drawable/ic_ad"
                        android:drawablePadding="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:hint="@string/title_ad_add"
                        android:inputType="textShortMessage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                </EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/about"
                        android:hint="@string/about_ad_add"
                        android:drawableLeft="@drawable/ic_about_ad"
                        android:drawablePadding="10dp"
                        android:layout_marginVertical="15dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:inputType="textMultiLine"
                        android:gravity="top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/price"
                        android:hint="@string/price_ad_add"
                        android:drawableLeft="@drawable/ic_price"
                        android:drawablePadding="10dp"
                        android:layout_marginVertical="15dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/city"
                        android:hint="@string/city_ad_add"
                        android:drawableLeft="@drawable/ic_place"
                        android:drawablePadding="10dp"
                        android:layout_marginVertical="15dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                </EditText>
            </android.support.design.widget.TextInputLayout>


            <Button
                    android:id="@+id/button_ad_photo"
                    android:layout_marginVertical="15dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/add_ad_photo"
                    android:textColor="@color/white"
                    android:background="@drawable/button"
                    android:theme="@style/RoundedCornerButton"/>

            <HorizontalScrollView
                    android:id="@+id/horizontal_scroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:id="@+id/linear"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:orientation="horizontal">
                </LinearLayout>

            </HorizontalScrollView>
            <Button
                    android:id="@+id/button_ad_add"
                    android:text="@string/add_ad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/button"
                    android:theme="@style/RoundedCornerButton"/>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.NavigationView
            android:id="@+id/nav_view_add_ad"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/nav_header_main"
            app:menu="@menu/activity_main_drawer"/>
</android.support.v4.widget.DrawerLayout>